--- a/py/report_template.html
+++ b/py/report_template.html
@@ -1,17 +1,20 @@
-
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
 <h1> dbVar summary </h1>
+{{ var_type_pivot }}
 <h2> Variation Types</h2>
-{type_counts!s}
 <h3> Size distribution by type</h3>
-<img src='./copy number loss_size_distribution.png' />
-<img src='./copy number gain_size_distribution.png' />
-<img src='./inversion_size_distribution.png' />
+{% for var_type in var_types %}
+<img src='./{{var_type}}_size_distribution.png' />
+<br />
+{% endfor %}
+
 <h2> Study Statistics </h2>
+{% for study in studies %}
+{% endfor %}
 <h2> Unique Features </h2>
 </body>
 </html>
