--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Online Bioinformatics Tools by NCBI-Hackathons</title>
+    <title>Structural Variant Comparison</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,69 +11,41 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Online Bioinformatics Tools</h1>
+      <h1 class="project-name">Structural Variant Comparison</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS" class="btn">View on GitHub</a>
-      <a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison" class="btn">View on GitHub</a>
+      <a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-     <a href="/Community_Software_Tools_for_NGS/about.html" title="About">About</a> 
+     <a href="about.html" title="About">About</a> 
      <h2>
-<a id="cnv-copy-number-variations-identification" class="anchor" href="#cnv-copy-number-variations-identification" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/CNV_Identification.md">CNV (copy number variations) Identification</a>
+<a id=".gitignore" class="anchor" href="#.gitignore" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/.gitignore">.gitignore</a>
 </h2>
 
 <h2>
-<a id="commercial-tools" class="anchor" href="#commercial-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Commercial_tools.md">Commercial tools</a>
+<a id="Figure1.SVC.jpg" class="anchor" href="#Figure1.SVC.jpg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/Figure1_SVC.jpg">Figure1.SVC.jpg</a>
 </h2>
 
 <h2>
-<a id="downstream-analysis-of-variants" class="anchor" href="#downstream-analysis-of-variants" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Downstream_Analysis_of_Variants.md">Downstream Analysis of Variants</a>
+<a id="Example.cfg" class="anchor" href="#Example.cfg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/example.cfg">Example.cfg</a>
 </h2>
 
 <h2>
-<a id="germline-callers" class="anchor" href="#germline-callers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Germline_Callers.md">Germline Callers</a>
+<a id="functional_test_case_make_gvf_and_bed" class="anchor" href="#functional_test_case_make_gvf_and_bed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/functional_test_case_make_gvf_and_bedgraph_nstd45.tar.gz">functional_test_case_make_gvf_and_bed</a>
 </h2>
 
 <h2>
-<a id="germline--somatic-callers" class="anchor" href="#germline--somatic-callers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Germlin_%2B_Somatic_Callers.md">Germline + Somatic Callers</a>
+<a id="link_to_dbVar_presentation.md" class="anchor" href="#link_to_dbVar_presentation.md" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/link_to_dbVar_presentation.md">link_to_dbVar_presentation.md</a>
 </h2>
 
 <h2>
-<a id="metagenomics-tools" class="anchor" href="#metagenomics-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Metagenomic_tools.md">Metagenomics Tools</a>
+<a id="make_dbVar_reference_2.py" class="anchor" href="#make_dbVar_reference_2.py" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/make_dbVar_reference_2.py">make_dbVar_reference_2.py</a>
 </h2>
 
 <h2>
-<a id="other-tools" class="anchor" href="#other-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Other-Tools.md">Other Tools</a>
-</h2>
-
-<h2>
-<a id="public-resources-related-to-clinical-impacts-of-snps" class="anchor" href="#public-resources-related-to-clinical-impacts-of-snps" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://hermesfj.github.io/SNPs/" title="Metatools">Public Resources Related to Clinical Impacts of SNPs</a>
-</h2>
-
-<h2>
-<a id="somatic-callers" class="anchor" href="#somatic-callers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Somatic_Callers.md">Somatic Callers</a>
-</h2>
-
-<h2>
-<a id="structural-variant-indenification" class="anchor" href="#structural-variant-indenification" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Variant_Identification.md">Structural Variant Indenification</a>
-</h2>
-
-<h2>
-<a id="structural-variant-tools" class="anchor" href="#structural-variant-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Structural_variant_tools.md">Structural Variant Tools</a>
-</h2>
-
-<h2>
-<a id="toolkits" class="anchor" href="#toolkits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Tool_Kits.md">ToolKits</a>
-</h2>
-
-<h2>
-<a id="tool-repositories-analytical-pipelines--workflow-systems" class="anchor" href="#tool-repositories-analytical-pipelines--workflow-systems" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Tool_Kits.md">Tool Repositories, Analytical Pipelines, &amp; Workflow Systems</a>
-</h2>
-
-<h2>
-<a id="variant-annotation" class="anchor" href="#variant-annotation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Community_Software_Tools_for_NGS/blob/master/Variant_Annotation.md">Variant Annotation</a>
+<a id="raw_variant_statistics.pdf" class="anchor" href="#raw_variant_statistics.pdf" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/NCBI-Hackathons/Structural_Variant_Comparison/blob/master/raw_variant_statistics.pdf">raw_variant_statistics.pdf</a>
 </h2>
 
 <hr>
@@ -81,8 +53,8 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Updated July 2016<br>
-Created by: Ben Busby, Kaitlyn Williams, and Farrah Hermes                   </p>
+<p>Updated October 2016<br>
+Created by: Ben Busby, Emmanuel Marte, Kaitlyn Williams, and Farrah Hermes                   </p>
 
 <hr>
 
